--- a/styles/about.css
+++ b/styles/about.css
@@ -1,4 +1,3 @@
-
 body {
     font-family: "Work Sans", sans-serif;
     margin: 0;
@@ -11,6 +10,7 @@ main .content {
     display: flex;
     align-items: center;
     padding: 60px;
+    flex-wrap: wrap;
 }
 
 main .content .image {
@@ -27,6 +27,7 @@ main .content .image img {
 main .content .text {
     flex: 2;
     padding-left: 60px;
+    padding-bottom: 20px; 
 }
 
 main .content .text h1 {
@@ -42,8 +43,8 @@ main .content .text p {
 
 footer {
     text-align: center;
-    padding: 0;
-    background-color: rgb(251, 243, 232);
+    padding: 10px 0;
+    background-color: rgb(252, 233, 207);
     color: black;
     position: fixed;
     width: 100%;
@@ -57,5 +58,45 @@ footer {
     }
     to {
         opacity: 1;
+    }
+}
+
+@media (max-width: 768px) {
+    main .content {
+        padding: 20px;
+    }
+
+    main .content .image img {
+        padding-left: 0;
+    }
+
+    main .content .text {
+        padding-left: 20px;
+        padding-bottom: 20px; /* Added padding at the bottom */
+    }
+
+    main .content .text h1 {
+        font-size: 28px;
+    }
+
+    main .content .text p {
+        font-size: 16px;
+    }
+}
+
+@media (max-width: 480px) {
+    main .content {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    main .content .image {
+        margin-right: 0;
+        margin-bottom: 20px;
+    }
+
+    main .content .text {
+        padding-left: 0;
+        padding-bottom: 50px; /* Added padding at the bottom */
     }
 }
