--- a/styles/header.css
+++ b/styles/header.css
@@ -2,14 +2,13 @@
 
 nav {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-between; 
     align-items: center;
-    background-color: rgb(251, 243, 232);
+    background-color: rgb(252, 233, 207);
     padding: 1em;
 }
 
 .nav-left a {
-
     font-family: "Work Sans", sans-serif;
     font-weight: 400;
     font-size: 1em;
@@ -41,4 +40,111 @@ nav {
 
 .nav-right ul li a:hover {
     text-decoration: underline;
+}
+
+@media (max-width: 768px) {
+    .menu-button {
+        position: relative;
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+        width: 30px;
+        height: 30px;
+        cursor: pointer;
+        transition: all .5s ease-in-out;
+        border-radius: 4px;
+    }
+    .hamburger-menu {
+        width: 30px;
+        height: 3px;
+        background: #333;
+        border-radius: 5px;
+        transition: all .5s ease-in-out;
+    }
+    .hamburger-menu::before,
+    .hamburger-menu::after {
+        content: '';
+        position: absolute;
+        width: 30px;
+        height: 3px;
+        background: #333;
+        transition: all .5s ease-in-out;
+        border-radius: 4px;
+    }
+
+    .hamburger-menu::before {
+        transform: translateY(-10px);
+    }
+
+    .hamburger-menu::after {
+        transform: translateY(10px);
+    }
+
+    .menu-button.open .hamburger-menu {
+        transform: translateX(-50px);
+        background: transparent;
+        box-shadow: none;
+    } 
+
+    .menu-button.open .hamburger-menu::before {
+        transform: rotate(45deg) translate(35px, -35px);
+    }
+
+    .menu-button.open .hamburger-menu::after {
+        transform: rotate(-45deg) translate(35px, 35px);
+    }
+
+    .nav-right {
+        position: fixed;
+        right: 0;
+        top: 60px;
+        background-color: #f4e1d2;
+        width: 100%;
+        height: 100%;
+        align-items: center;
+        justify-content: center;
+        display: none;
+        opacity: 0;
+        transition: opacity 1s ease-in-out;
+    }
+
+    .nav-right.active {
+        display: flex;
+        opacity: 1;
+        animation: fadeIn 1s ease-in-out forwards;
+    }
+
+    .nav-right.fade-out {
+        display: flex;
+        opacity: 0;
+        animation: fadeOut 1s ease-in-out forwards;
+    }
+
+    .nav-item {
+        margin: 20px 0;
+    }
+
+    .menu-button {
+        display: flex;
+    }
+
+    .nav-list {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .nav-list li {
+        display: block;
+        margin: 10px 0;
+    }
+}
+
+@keyframes fadeOut {
+    from {
+        opacity: 1;
+    }
+    to {
+        opacity: 0;
+    }
 }
