--- a/styles/styles.css
+++ b/styles/styles.css
@@ -143,6 +143,11 @@ footer {
     }
 
     .grid-container {
-        grid-template-columns: repeat(1, 1fr); 
+        grid-template-columns: repeat(2, 1fr); 
+    }
+
+    .grid-item img {
+        height: auto;
+        aspect-ratio: 1 / 1;
     }
 }
