--- a/styles/about.css
+++ b/styles/about.css
@@ -1,6 +1,6 @@
 body {
     font-family: "Work Sans", sans-serif;
-    margin: 0;
+    margin: 0; 
     padding: 0;
     background-color: rgb(251, 243, 232);
     animation: fadeIn 1s ease-in backwards;
@@ -11,6 +11,7 @@ main .content {
     align-items: center;
     padding: 60px;
     flex-wrap: wrap;
+    margin-bottom: 65px;
 }
 
 main .content .image {
@@ -43,12 +44,10 @@ main .content .text p {
 
 footer {
     text-align: center;
-    padding: 10px 0;
-    background-color: rgb(252, 233, 207);
+    
+    background-color: rgb(251, 243, 232);
     color: black;
-    position: fixed;
     width: 100%;
-    bottom: 0;
     font-size: 0.8em;
 }
 
