--- a/styles/contact.css
+++ b/styles/contact.css
@@ -13,6 +13,7 @@ body {
     width: 80%;
     max-width: 600px;
     font-family: "Work Sans", sans-serif;
+    margin-bottom: 46px;
 }
 
 .contact h2 {
@@ -61,12 +62,9 @@ body {
 
 footer {
     text-align: center;
-    padding: 0;
-    background-color: rgb(252, 233, 207);
+    background-color: rgb(251, 243, 232);
     color: black;
-    position: fixed;
     width: 100%;
-    bottom: 0;
     font-size: 0.8em;
 }
 
