--- a/styles/contact.css
+++ b/styles/contact.css
@@ -1,9 +1,19 @@
-body {
-    font-family: "Work Sans", sans-serif;
+html, body {
+    height: 100%;
     margin: 0;
     padding: 0;
-    background-color: rgb(251, 243, 232);
+    font-family: "Work Sans", sans-serif;
+    background-color: rgb(219, 248, 255);
+    display: flex;
+    flex-direction: column;
+}
+
+body {
     animation: fadeIn 1s ease-in backwards;
+}
+
+nav, section.contact, footer {
+    width: 100%;
 }
 
 .contact {
@@ -14,6 +24,7 @@ body {
     max-width: 600px;
     font-family: "Work Sans", sans-serif;
     margin-bottom: 46px;
+    flex: 1; 
 }
 
 .contact h2 {
@@ -66,6 +77,7 @@ footer {
     color: black;
     width: 100%;
     font-size: 0.8em;
+    flex-shrink: 0;
 }
 
 @keyframes fadeIn {
