--- a/styles/header.css
+++ b/styles/header.css
@@ -4,7 +4,7 @@ nav {
     display: flex;
     justify-content: space-between; 
     align-items: center;
-    background-color: rgb(251, 243, 232);
+    background-color: rgb(0, 0, 0);
     padding: 1em;
     border-bottom: 1px solid #333;
     width: 90%;
@@ -16,7 +16,7 @@ nav {
     font-weight: 400;
     font-size: 1em;
     font-style: normal;
-    color: black;
+    color: white;
     text-decoration: none;
     padding-left: 25px;
 }
@@ -33,7 +33,7 @@ nav {
 }
 
 .nav-right ul li a {
-    color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
     text-decoration: none;
     font-family: "Work Sans", sans-serif;
     font-weight: 500;
@@ -42,7 +42,7 @@ nav {
 }
 
 .nav-right ul li a:hover {
-    text-decoration: underline;
+    color: lightgray;
 }
 
 @media (max-width: 768px) {
@@ -60,7 +60,7 @@ nav {
     .hamburger-menu {
         width: 30px;
         height: 3px;
-        background: #333;
+        background: #ffffff;
         border-radius: 5px;
         transition: all .5s ease-in-out;
     }
@@ -70,7 +70,7 @@ nav {
         position: absolute;
         width: 30px;
         height: 3px;
-        background: #333;
+        background: #ffffff;
         transition: all .5s ease-in-out;
         border-radius: 4px;
     }
@@ -101,7 +101,7 @@ nav {
         position: fixed;
         right: 0;
         top: 60px;
-        background-color: #f4e1d2;
+        background-color: #000000;
         width: 100%;
         height: 100%;
         align-items: center;
