--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,9 +1,8 @@
-/* styles.css */
 body {
     font-family: "Work Sans", sans-serif;
     margin: 0;
     padding: 0;
-    background-color: rgb(233, 219, 255);
+    background-color: rgb(0, 0, 0);
     animation: fadeIn 1s ease-in forwards;
 }
 
@@ -46,19 +45,20 @@ main {
 .grid-item h3 {
     margin: 0.5em 0 0.2em 0;
     font-size: 1em;
+    color: #fff;
 }
 
 .grid-item p {
     margin: 0;
     font-size: 0.9em;
-    color: #666;
+    color: #ffffff;
 }
 
 footer {
     text-align: center;
     padding: 0;
-    background-color: rgb(251, 243, 232);
-    color: black;
+    background-color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
     width: 100%;
     bottom: 0;
     font-size: 0.8em;
@@ -137,15 +137,6 @@ footer {
     cursor: pointer; 
     padding: 15px;
     background-color: transparent;
-}
-
-@keyframes fadeIn {
-    from {
-        opacity: 0;
-    }
-    to {
-        opacity: 1;
-    }
 }
 
 @media only screen and (max-width: 700px) {
