--- a/styles/styles.css
+++ b/styles/styles.css
@@ -136,7 +136,7 @@ footer {
     border: none;
     cursor: pointer; 
     padding: 15px;
-    background-color: transparent;
+    background-color: rgb(0, 0, 0);
 }
 
 @media only screen and (max-width: 700px) {
