--- a/styles/header.css
+++ b/styles/header.css
@@ -16,7 +16,7 @@ nav {
     font-weight: 400;
     font-size: 1em;
     font-style: normal;
-    color: white;
+    color: lightgreen;
     text-decoration: none;
     padding-left: 25px;
 }
