--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,7 +6,7 @@ body {
     animation: fadeIn 1s ease-in forwards;
 }
 
-main {
+main { 
     padding: 2em;
 }
 
@@ -136,7 +136,7 @@ footer {
     border: none;
     cursor: pointer; 
     padding: 15px;
-    background-color: rgb(0, 0, 0);
+    background-color: transparent;
 }
 
 @media only screen and (max-width: 700px) {
@@ -152,5 +152,60 @@ footer {
     .grid-item img {
         height: auto;
         aspect-ratio: 1 / 1;
+    }
+}
+
+.landing-page {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(0, 0, 0);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 100;
+}
+
+.landing-text span {
+    color: lightgreen;
+    font-size: 2em;
+    display: inline-block;
+    opacity: 0; 
+    transform: translateY(40px);
+    animation: pop-up 2s forwards;
+    /*animation: pop-up 2s forwards, fadeOut 2s 4s forwards;*/
+}
+
+@keyframes pop-up {
+    to {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+  
+  .landing-text span:nth-child(1) { animation-delay: 0s; }
+  .landing-text span:nth-child(2) { animation-delay: 0.1s; }
+  .landing-text span:nth-child(3) { animation-delay: 0.2s; }
+  .landing-text span:nth-child(4) { animation-delay: 0.3s; }
+  .landing-text span:nth-child(5) { animation-delay: 0.4s; }
+  .landing-text span:nth-child(6) { animation-delay: 0.5s; }
+  .landing-text span:nth-child(7) { animation-delay: 0.6s; }
+  .landing-text span:nth-child(8) { animation-delay: 0.7s; }
+  .landing-text span:nth-child(9) { animation-delay: 0.8s; }
+  .landing-text span:nth-child(10) { animation-delay: 0.9s; }
+  .landing-text span:nth-child(11) { animation-delay: 1s; }
+  .landing-text span:nth-child(12) { animation-delay: 1.1s; }
+  .landing-text span:nth-child(13) { animation-delay: 1.2s; }
+  .landing-text span:nth-child(14) { animation-delay: 1.3s; }
+  .landing-text span:nth-child(15) { animation-delay: 1.4s; }
+
+@keyframes fadeOut {
+    0% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
     }
 }
