--- a/styles/contact.css
+++ b/styles/contact.css
@@ -3,14 +3,13 @@ html, body {
     margin: 0;
     padding: 0;
     font-family: "Work Sans", sans-serif;
-    background-color: rgb(0, 0, 0);
+    background-color: #01242d;
     display: flex;
     flex-direction: column;
-    overflow-x: hidden; 
+    overflow: hidden; /* Prevent vertical scrolling */
 }
 
 body {
-    animation: fadeIn 1s ease-in backwards;
     display: flex;
     flex-direction: column;
 }
@@ -26,10 +25,11 @@ nav, footer {
     width: 80%;
     max-width: 600px;
     font-family: "Work Sans", sans-serif;
-    margin-bottom: 46px;
     color: #ffffff;
     box-sizing: border-box; 
     flex: 1; 
+    overflow-y: auto; 
+    animation: fadeIn 1.5s ease-in;
 }
 
 .contact h2 {
@@ -57,7 +57,7 @@ nav, footer {
     border: 1px solid #ffffff;
     border-radius: 5px;
     font-family: "Work Sans", sans-serif;
-    background-color: rgb(0, 0, 0);
+    background-color: #01242d;
     width: 100%;
     box-sizing: border-box; 
 }
@@ -79,21 +79,13 @@ nav, footer {
 
 footer {
     text-align: center;
-    background-color: rgb(0, 0, 0);
+    background-color: #01242d;
     color: rgb(255, 255, 255);
     width: 100%;
     font-size: 0.8em;
-    flex-shrink: 0;
     margin-top: auto; 
-}
-
-@keyframes fadeIn {
-    from {
-        opacity: 0;
-    }
-    to {
-        opacity: 1;
-    }
+    position: fixed;
+    bottom: 10px; 
 }
 
 /* Media Queries for Mobile Devices */
@@ -102,5 +94,14 @@ footer {
         width: 90%;
         padding: 1em;
         margin: 1em auto;
+    }
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
     }
 }
