--- a/styles/header.css
+++ b/styles/header.css
@@ -4,21 +4,15 @@ nav {
     display: flex;
     justify-content: space-between; 
     align-items: center;
-    background-color: rgb(0, 0, 0);
+    background-color: #01242d;
     padding: 1em;
-    border-bottom: 1px solid #333;
+    border-bottom: 1px solid #878787;
     width: 90%;
     margin: 0 auto;
 }
 
-.nav-left a {
-    font-family: "Work Sans", sans-serif;
-    font-weight: 400;
-    font-size: 1em;
-    font-style: normal;
-    color: lightgreen;
-    text-decoration: none;
-    padding-left: 25px;
+.nav-left img {
+    width: 130px;
 }
 
 .nav-right ul {
@@ -101,7 +95,7 @@ nav {
         position: fixed;
         right: 0;
         top: 60px;
-        background-color: #000000;
+        background-color: #01242d;
         width: 100%;
         height: 100%;
         align-items: center;
