--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,8 +2,7 @@ body {
     font-family: "Work Sans", sans-serif;
     margin: 0;
     padding: 0;
-    background-color: rgb(0, 0, 0);
-    animation: fadeIn 1s ease-in forwards;
+    background-color: #01242d;
 }
 
 main { 
@@ -17,6 +16,7 @@ main {
     width: 70%;
     margin: 0 auto;
     padding-bottom: 2em;
+    animation: fadeIn 1.5s ease-in;
 }
 
 .grid-item {
@@ -57,7 +57,7 @@ main {
 footer {
     text-align: center;
     padding: 0;
-    background-color: rgb(0, 0, 0);
+    background-color: #01242d;
     color: rgb(255, 255, 255);
     width: 100%;
     bottom: 0;
@@ -139,6 +139,26 @@ footer {
     background-color: transparent;
 }
 
+.nav-btn {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    background-color: rgba(0,0,0,0.5);
+    color: white;
+    border: none;
+    padding: 10px;
+    cursor: pointer;
+    z-index: 1;
+}
+
+#prevBtn {
+    left: 10px;
+}
+
+#nextBtn {
+    right: 10px;
+}
+
 @media only screen and (max-width: 700px) {
     .modal-content {
         width: 100%;
@@ -153,16 +173,15 @@ footer {
         height: auto;
         aspect-ratio: 1 / 1;
     }
+}
+  
 
-    .landing-page {
-        align-items: center;
-        justify-content: center;
-        text-align: center;
-        padding: 0 1em;
+@keyframes fadeOut {
+    0% {
+        opacity: 1;
     }
-
-    .landing-text span {
-        font-size: 1.5em;
+    100% {
+        opacity: 0;
     }
 }
 
@@ -172,51 +191,47 @@ footer {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgb(0, 0, 0);
+    background-color: #01242d;
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: 100;
+    z-index: 1000;
+    opacity: 1;
+    transition: opacity 1s ease-in-out;
+    pointer-events: all;
 }
 
-.landing-text span {
-    color: lightgreen;
-    font-size: 2em;
-    display: inline-block;
-    opacity: 0; 
-    transform: translateY(40px);
-    animation: pop-up 2s forwards;
-    /*animation: pop-up 2s forwards, fadeOut 2s 4s forwards;*/
+.landing-page.hidden {
+    opacity: 0;
+    pointer-events: none;
 }
 
-@keyframes pop-up {
-    to {
-      opacity: 1;
-      transform: translateY(0);
+.landing-logo {
+    width: 50%;
+    max-width: 300px;
+    animation: slideUp 2s ease-in-out forwards;
+}
+
+@keyframes slideUp {
+    from {
+        transform: translateY(100%);
+        opacity: 0;
     }
-  }
-  
-  .landing-text span:nth-child(1) { animation-delay: 0s; }
-  .landing-text span:nth-child(2) { animation-delay: 0.1s; }
-  .landing-text span:nth-child(3) { animation-delay: 0.2s; }
-  .landing-text span:nth-child(4) { animation-delay: 0.3s; }
-  .landing-text span:nth-child(5) { animation-delay: 0.4s; }
-  .landing-text span:nth-child(6) { animation-delay: 0.5s; }
-  .landing-text span:nth-child(7) { animation-delay: 0.6s; }
-  .landing-text span:nth-child(8) { animation-delay: 0.7s; }
-  .landing-text span:nth-child(9) { animation-delay: 0.8s; }
-  .landing-text span:nth-child(10) { animation-delay: 0.9s; }
-  .landing-text span:nth-child(11) { animation-delay: 1s; }
-  .landing-text span:nth-child(12) { animation-delay: 1.1s; }
-  .landing-text span:nth-child(13) { animation-delay: 1.2s; }
-  .landing-text span:nth-child(14) { animation-delay: 1.3s; }
-  .landing-text span:nth-child(15) { animation-delay: 1.4s; }
-
-@keyframes fadeOut {
-    0% {
+    to {
+        transform: translateY(0);
         opacity: 1;
     }
-    100% {
+}
+
+
+
+@keyframes fadeIn {
+    from {
+        
         opacity: 0;
+    }
+    to {
+        
+        opacity: 1;
     }
 }
